@@ -101,11 +101,15 @@ fi
 
 %changelog
 * Mon Jan 07 2012 Alex Villacis Lasso <a_villacis@palosanto.com>
-- Dialer (ECCP): modify many of the ECCP example scripts to get agent and 
+- FIXED: Dialer (ECCP): fix validation that prevented incoming calls from 
+  entering OnQueue state.
+- FIXED: Dialer (ECCP): fix forgotten specification of campaign type on 
+  implementation of getcampaignstatus request.
+- CHANGED: Dialer (ECCP): modify many of the ECCP example scripts to get agent and 
   password from the command line.
-- Dialer (ECCP): fix error message for hangup request when agent exists but is 
+- FIXED: Dialer (ECCP): fix error message for hangup request when agent exists but is 
   not handling a call.
-- Dialer (ECCP): add required campaign ID when starting hold.
+- FIXED: Dialer (ECCP): add required campaign ID when starting hold.
 
 * Sat Jan 05 2012 Alex Villacis Lasso <a_villacis@palosanto.com>
 - FIXED: Agent Console: fix behavior when no callback extensions exist.
